--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- Book item -->
 <div class="book-library">
-    <div class="book-item" data-pdf="https://5000-years.org/5000year.space/0datacenter/book/10ch/10c-003.pdf">
+    <div class="book-item" data-pdf="https://drive.google.com/file/d/1fOyHH3KoczB17lJHjBJyl_YNj0zrbMsZ/preview">
         <a href="#" class="book-item" data-pdf="pdf1.pdf">
             <img src="https://5000-years.org/book/53228/2023-02-14_19_35_42-10ch.jpg" alt="Book Cover">
             <div class="book-details">
@@ -52,7 +52,7 @@
         </a>
     </div>
     
-    <div class="book-item" data-pdf="https://5000-years.org/5000year.space/0datacenter/book/10ch/10c-005.pdf">
+    <div class="book-item" data-pdf="https://drive.google.com/file/d/1czPnkxTQBRqJakoE1bE3ZSGCy8TvDp8a/preview">
         <a href="#" class="book-item" data-pdf="pdf1.pdf">
             <img src="https://5000-years.org/book/53229/2023-02-14_19_36_09-10ch.jpg" alt="Book Cover">
             <div class="book-details">
@@ -61,7 +61,7 @@
         </a>
     </div>
 
-    <div class="book-item" data-pdf="https://5000-years.org/5000year.space/0datacenter/book/10ch/10c-009.pdf">
+    <div class="book-item" data-pdf="https://drive.google.com/file/d/1MwU_rJzpMajoUHNsIukRhXnpTz2ynuc_/preview">
         <a href="#" class="book-item" data-pdf="pdf1.pdf">
             <img src="https://5000-years.org/book/80160/2023-02-14_19_36_37-10ch.jpg" alt="Book Cover">
             <div class="book-details">
