--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div class="popup-content">
       <div class="popup-header">
         <h2 id="popup-title" class="popup-title"></h2>
-        <button class="close-btn" onclick="closePopup()">Close</button>
+        <button class="close-btn" onclick="closePopup()">បិទ</button>
       </div>
       <div class="popup-body">
         <iframe id="pdf-iframe" class="pdf-iframe" src="" frameborder="0"></iframe>
