--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
         <div class="menu_cover"></div>
         <div class="menu_content">
             <div class="menu_image">
-                <img src="https://media.tenor.com/exuv8TaJodUAAAAC/statue-%E1%9E%96%E1%9F%92%E1%9E%9A%E1%9F%87%E1%9E%96%E1%9E%BB%E1%9E%91%E1%9F%92%E1%9E%92.gif"
+                <img src="https://bycommonconsent.files.wordpress.com/2021/02/buddha-4264589_1280.jpg?w=1200"
                     alt="Menu Image">
             </div>
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <p>
+                        ដាក់ជាកម្មវិធីដោយ<br><b>ខ្ញុំបាទ មី​ ឡងឌី</b>
+                    </p>
                 </li>
                 <li>
-                    <a href="#">១ ទសជាតក</a>
+                    <a href="#">សៀវភៅទាំងអស់បានយកចេញពីគេហទំព័រ ៥០០០ឆ្នាំ</a>
                 </li>
+                <br><br><br><br><br>
                 <li>
-                    <a href="#">២ ទសជាតក</a>
-                </li>
-                <li>
-                    <a href="#">៣ ទសជាតក</a>
+                    <p>©️ឆ្នាំ២០២៣</p>
                 </li>
             </ul>
         </div>
@@ -143,7 +143,7 @@
     <div class="popup-content">
       <div class="popup-header">
         <h2 id="popup-title" class="popup-title"></h2>
-        <button class="close-btn" onclick="closePopup()">បិទ</button>
+        <button class="close-btn" onclick="closePopup()">Close</button>
       </div>
       <div class="popup-body">
         <iframe id="pdf-iframe" class="pdf-iframe" src="" frameborder="0"></iframe>
