--- a/index.html
+++ b/index.html
@@ -135,7 +135,19 @@
     <!-- Add more book items as needed -->
 </div>
 
-
+<!-- Footer -->
+<footer>
+    <div class="footer-container">
+      <div class="column">
+        <h3>ដកស្រង់</h3>
+        <p>សៀវភៅទាំងអស់បានយកចេញពីគេហទំព័រ៥០០០ឆ្នាំ <br>សៀវភៅទាំងអស់ ដឹកនាំការរៀបរៀងដោយ លោតាបណ្ឌិត កុល ផេង</p>
+      </div>
+      <div class="column">
+        <h3>រក្សាសិទ្ធិ</h3>
+        <p>©️LangdyApps2023<br>ស្រុកសំឡូត ខេត្តបាត់ដំបង</p>
+      </div>
+    </div>
+  </footer>
 
 
     <!-- Popup Box -->
